// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component should not render popover when interction type is hover and user click on it 1`] = `
.c2 {
  position: absolute;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c3 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component should render properly when interction type is click 1`] = `
.c2 {
  position: absolute;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
  width: 100%;
  height: 100%;
}

.c3 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3:hover .c1 {
  display: block;
}

.c4 .c1 {
  bottom: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover .c1 {
  display: block;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c1 {
  right: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div>
  <div>
    <div
      data-testid="sibling"
    >
      Sibling div
    </div>
    <div
      class="c0"
      data-testid="popover-wrapper"
    >
      <div>
        Dummy Div
      </div>
      <div
        class="c1 c2"
      >
        Dummy popover
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover component should render properly when interction type is click 2`] = `
<div>
  <div>
    <div
      data-testid="sibling"
    >
      Sibling div
    </div>
    <div
      class="Popoverstyled__PopoverWrapperStyled-sc-1ep6kh8-1 nwLMf"
      data-testid="popover-wrapper"
    >
      <div>
        Dummy Div
      </div>
      <div
        class="Popoverstyled__PopoverStyled-sc-1ep6kh8-0 kgDuhT"
        style="display: block;"
      >
        Dummy popover
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover component should render properly when interction type is click 3`] = `
<div>
  <div>
    <div
      data-testid="sibling"
    >
      Sibling div
    </div>
    <div
      class="Popoverstyled__PopoverWrapperStyled-sc-1ep6kh8-1 nwLMf"
      data-testid="popover-wrapper"
    >
      <div>
        Dummy Div
      </div>
      <div
        class="Popoverstyled__PopoverStyled-sc-1ep6kh8-0 kgDuhT"
        style="display: none;"
      >
        Dummy popover
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover component should render properly when interction type is click 4`] = `
<div>
  <div>
    <div
      data-testid="sibling"
    >
      Sibling div
    </div>
    <div
      class="Popoverstyled__PopoverWrapperStyled-sc-1ep6kh8-1 nwLMf"
      data-testid="popover-wrapper"
    >
      <div>
        Dummy Div
      </div>
      <div
        class="Popoverstyled__PopoverStyled-sc-1ep6kh8-0 kgDuhT"
        style="display: none;"
      >
        Dummy popover
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover component should render properly when interction type is hover 1`] = `
.c2 {
  position: absolute;
  display: none;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  border-radius: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c1 {
  left: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0:hover .c1 {
  display: block;
}

<div>
  <div
    class="c0"
    data-testid="popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover component should render properly when interction type is hover 2`] = `
<div>
  <div
    class="Popoverstyled__PopoverWrapperStyled-sc-1ep6kh8-1 ksQXxV"
    data-testid="popover-wrapper"
  >
    <div>
      Dummy Div
    </div>
    <div
      class="Popoverstyled__PopoverStyled-sc-1ep6kh8-0 hAZlVo"
    >
      Dummy popover
    </div>
  </div>
</div>
`;
